--- a/package.json
+++ b/package.json
@@ -15,13 +15,17 @@
   },
   "dependencies": {
     "bcrypt": "^6.0.0",
+    "bootstrap": "^5.3.8",
+    "bootstrap-icons": "^1.13.1",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^17.2.2",
     "express": "^5.1.0",
+    "jquery": "^3.7.1",
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.15.0",
     "pinia": "^3.0.3",
+    "vegas": "^2.6.0",
     "vue": "^3.5.18",
     "vue-router": "^4.5.1"
   },
